Add a title page

--- a/2019/25-02-CSE-solvers.tex
+++ b/2019/25-02-CSE-solvers.tex
@@ -2,10 +2,23 @@
 
 \usetheme{metropolis}
 
+\author{Lawrence Mitchell\inst{1,*} \\
+  \and {\scriptsize
+    P.~E.~Farrell (Oxford)
+    \and
+    R.~C.~Kirby (Baylor)
+    \and
+    M.~G.~Knepley (Buffalo)}}
+\institute{
+  \inst{1}Department of Computer Science, Durham University\\
+  \inst{*}\texttt{lawrence.mitchell@durham.ac.uk}}
+
 \title{A new configurable preconditioner for additive subspace correction methods in
   PETSc}
 
 \begin{document}
+
+\maketitle
 
 \begin{abstract}
   Small block overlapping, and non-overlapping, Schwarz methods are
